# deep-operator-network

./: .gitignore  LICENSE  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
configs/: anti_derivative.yaml  heat2d.yaml  heat2d_smoke.yaml  lame_sphere.yaml
docs/: lame_sphere_problem.md
notebooks/: deep_operator_network.ipynb  eda_anti_derivative.ipynb  eda_lame_sphere.ipynb  fno_anti_derivative.ipynb  heat2d_train_compare.ipynb  heat_equation_2d_rectangular.ipynb  heat_equation_transient.ipynb  lame_sphere_train.ipynb
scripts/: export_heat2d.py  export_lame_sphere.py  generate_animation.py  generate_carousel.py  generate_heat2d_dataset.py  generate_lame_sphere_dataset.py  generate_lame_sphere_fields.py  render_lame_sphere_3d.py  train_anti_derivative.py
src/neural_operators/: __init__.py
src/neural_operators/adapters/exporters/: __init__.py  torchscript.py
src/neural_operators/adapters/physics/: __init__.py  heat2d_solver.py  lame_sphere_solver.py
src/neural_operators/data/: __init__.py  anti_derivative.py  heat2d.py  lame_sphere.py
src/neural_operators/domain/entities/: __init__.py  heat2d.py  lame_sphere.py
src/neural_operators/domain/ports/: __init__.py  model_exporter.py  physics_solver.py
src/neural_operators/models/: __init__.py  deeponet.py  inference.py
src/neural_operators/use_cases/: __init__.py  export_model.py  generate_dataset.py
src/neural_operators/utils/: __init__.py  metrics.py
tests/: test_heat2d.py  test_models.py
tests/unit/: test_domain_entities.py  test_export_use_case.py  test_inference_wrappers.py
