[project]
name = "neural-operators"
version = "0.1.0"
description = "Neural operator library: FNO and DeepONet for PDE operator learning"
requires-python = ">=3.10"
dependencies = [
    "torch==2.5.1",
    "nvidia-cublas-cu12",
    "nvidia-cuda-cupti-cu12",
    "nvidia-cuda-nvrtc-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12",
    "nvidia-curand-cu12",
    "nvidia-cusolver-cu12",
    "nvidia-cusparse-cu12",
    "nvidia-nccl-cu12",
    "nvidia-nvjitlink-cu12",
    "nvidia-nvtx-cu12",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "scipy-stubs~=1.15.3",
    "path>=17.1.1",
    "neuraloperator>=2.0.0",
    "pyarrow>=24.0.0",
    "pandas>=2.3.3",
    "pyvista[all]>=0.47.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "pytest>=8.0"]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neural_operators"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
# E501: line length handled by formatter
# E701/E702: deliberate semicolon / inline-colon style in solver code
# E402: sys.path.insert before imports is required in standalone scripts
# I001: import ordering (cosmetic, pre-existing)
ignore = ["E501", "E701", "E702", "E402", "I001"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["F401"]  # unused imports in pre-existing script code

[tool.pytest.ini_options]
testpaths = ["tests"]
